syntax = "proto3";

package NStrm.NPackager.NLiveDataProto;

message TDiff {
    oneof _OneOf {
        TFullState FullState = 1;
        TStream Stream = 2;
        TNewChunk NewChunk = 3;
        TChunkInS3 ChunkInS3 = 4;
        TEndStream EndStream = 5;
        TDeleteStream DeleteStream = 6;
        TBatchEnd BatchEnd = 7;
    }
    uint64 Timestamp = 8;
}

message TFullState {
    repeated TStreamState Streams = 1;
}

message TStreamState {
    uint64 LastChangeTime = 1;
    TStream Stream = 2;
}

// full stream info
message TStream {
    string Uuid = 1;
    string S3Bucket = 2;
    repeated TChunkRange ChunkRanges = 3;
    uint64 ChunkDuration = 4;
    uint64 ChunkFragmentDuration = 5;
    uint64 HLSPartDuration = 12;
    uint64 FirstChunkIndex = 6;
    uint64 LastChunkInS3Index = 7;
    uint64 LastChunkIndex = 8;
    bool Ended = 9;
    uint64 SegmentDuration = 10;
}

message TTranscoderData {
    string Host = 1;
    uint32 HttpPort = 2;
}

message TChunkRange {
    uint64 ChunkIndexBegin = 1;
    uint64 ChunkIndexEnd = 2;
    TTranscoderData Transcoder = 3;
}

message TNewChunk {
    string Uuid = 1;
    uint64 ChunkEndTimestamp = 2;
    TTranscoderData Transcoder = 3;
}

message TChunkInS3 {
    string Uuid = 1;
    uint64 ChunkEndTimestamp = 2;
}

message TDeleteStream {
    string Uuid = 1;
}

message TEndStream {
    string Uuid = 1;
    uint64 LastChunkEndTimestamp = 2;
}

message TBatchEnd {
}
